@@ -1,0 +1,7 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<Request xmlns="http://www.dekabank.de/schemas/dbdzgs/request/"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+  <TechUserId>7</TechUserId>
+  <TechUserPwd>aaaaa</TechUserPwd>
+  <SessionId>312</SessionId>
+</Request>
