@@ -2,6 +2,11 @@
 SVN
 -------------------------------
 
+XML:   Resolved issue CASTOR-204 using contribution from Edward Kuns [edward.kuns@aspect.com]
+       Invalid Instance Document containing ALL elements of a schema definitions choice is not unmarshallable
+       Details: http://jira.codehaus.org/browse/CASTOR-204
+       (Edward - 20061012)
+
 All:   Resolved issue CASTOR-1619 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
        Backported Castor to Java 1.3 compatibility: Exceptions do not support claus.
        Details: http://jira.codehaus.org/browse/CASTOR-1619
